--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body class="body-element">
 <ul>
-  <li><a href="#news">Home</a></li>
-  <li><a href="#news">Music</a></li>
-  <li><a href="#contact">Pictures</a></li>
-  <li style="float:right"><a href="#about">About</a></li>
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Music</a></li>
+  <li><a href="#">Pictures</a></li>
+  <li style="float:right"><a href="#">About</a></li>
 </ul>
     <div id="content" class="correct">
     <div class="fixer">
