--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 <div class="footer-element" align="center">
 <div class="footer-container">
-<p class="footer-text" lang="en">Copyright © 2017 StarCorp Inc. All rights reserved.</p>
+<p class="footer-text">Copyright © 2017 StarCorp Inc. All rights reserved.</p>
 <span class="likebtn-wrapper" data-theme="black" data-rich_snippet="true" data-identifier="df9e24f0-6edd-4323-815d-dedb72203267"></span>
 </div>
 </div>
